fix bag with logout

--- a/ads/templates/ads/includes/inc_menu.html
+++ b/ads/templates/ads/includes/inc_menu.html
@@ -23,7 +23,7 @@
                         <li>
                             <form action="{% url 'ads:logout' %}" method="post">
                                 {% csrf_token %}
-                                <a type="submit" class="text-white">Выйти</a>
+                                <button type="submit" class="btn btn-success">выйти</button>
                             </form>
                         </li>
 
