add ad views and html

--- a/ads/templates/ads/includes/inc_menu.html
+++ b/ads/templates/ads/includes/inc_menu.html
@@ -18,7 +18,7 @@
                     <ul class="list-unstyled">
                         {% if not user.is_authenticated %}
                         <li><a href="{% url 'ads:login' %}" class="text-white">Войти</a></li>
-                        <li><a href="register" class="text-white">Зарегистрироваться</a></li>
+                        <li><a href="{% url 'ads:register' %}" class="text-white">Зарегистрироваться</a></li>
                         {% else %}
                         <li>
                             <form action="{% url 'ads:logout' %}" method="post">
