--- a/ads/templates/ads/ad_list.html
+++ b/ads/templates/ads/ad_list.html
@@ -1,6 +1,15 @@
 {% extends 'ads/base.html' %}
 {% load my_tags %}
 {% block content %}
+{% if messages %}
+    <div class="alert">
+        {% for message in messages %}
+            <div class="alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
     {% for ad in object_list %}
     <div class="col">
@@ -14,36 +23,18 @@
                         <div class="btn-group">
                             <a type="button" class="btn btn-sm btn-outline-secondary"
                                href="{% url 'ads:ad_detail' ad.pk %}">Подробнее</a>
+
                             <a type="button" class="btn btn-sm btn-outline-secondary"
                             href="{% url 'ads:ad_update' ad.pk %}">Изменить</a>
+                            <a type="button" class="btn btn-sm btn-outline-secondary"
+                            href="{% url 'ads:ad_delete' ad.pk %}">Удалить</a>
+
                         </div>
                         <small class="text-body-secondary">{{ ad.created_at }}</small>
                     </div>
                 </div>
             </div>
         </div>
-        <!--        <div class="card shadow-sm">-->
-        <!--            &lt;!&ndash;            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"&ndash;&gt;-->
-        <!--            &lt;!&ndash;                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"&ndash;&gt;-->
-        <!--            &lt;!&ndash;                 preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>&ndash;&gt;-->
-        <!--            &lt;!&ndash;                <rect width="100%" height="100%" fill="#55595c"/>&ndash;&gt;-->
-        <!--            &lt;!&ndash;                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>&ndash;&gt;-->
-        <!--            &lt;!&ndash;            </svg>&ndash;&gt;-->
-        <!--            <img src="{{ ad.photo | media_filter }}"-->
-        <!--                 class="card-img-top"-->
-        <!--                 alt="" width="100%" height="225">-->
-        <!--            <div class="card-body">-->
-        <!--                <h4 class="fw-light">{{ ad.title | title_filter }}</h4>-->
-        <!--                <p class="card-text">{{ ad.description | description_filter}}</p>-->
-        <!--                <div class="d-flex justify-content-between align-items-center">-->
-        <!--                    <div class="btn-group">-->
-        <!--                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>-->
-        <!--                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>-->
-        <!--                    </div>-->
-        <!--                    <small class="text-body-secondary">{{ ad.created_at }}</small>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </div>-->
     </div>
     {% endfor %}
 </div>
