--- a/ads/templates/ads/includes/inc_menu.html
+++ b/ads/templates/ads/includes/inc_menu.html
@@ -1,55 +1,31 @@
 {% load static %}
-<header data-bs-theme="dark">
-    <div class="collapse text-bg-dark" id="navbarHeader">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-7 py-4">
-                    <h4>About</h4>
-                    <p class="text-body-secondary">Add some information about the album below, the author, or any other
-                        background context. Make it a few sentences long so folks can pick up some informative tidbits.
-                        Then, link them off to some social networking sites or contact information.</p>
-                </div>
-                <div class="col-sm-4 offset-md-1 py-4">
-                    {% if user.is_authenticated %}
-                    <h4>Пользователь: {{ user }}</h4>
-                    {% else %}
-                    <h4>Авторизуйтесь</h4>
-                    {% endif %}
-                    <ul class="list-unstyled">
-                        {% if not user.is_authenticated %}
-                        <li><a href="{% url 'ads:login' %}" class="text-white">Войти</a></li>
-                        <li><a href="{% url 'ads:register' %}" class="text-white">Зарегистрироваться</a></li>
-                        {% else %}
-                        <li>
-                            <form action="{% url 'ads:logout' %}" method="post">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-success">выйти</button>
-                            </form>
-                        </li>
-
-                        {% endif %}
-                        <li><a href="#" class="text-white">Like on Facebook</a></li>
-                        <li><a href="#" class="text-white">Email me</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-        <div class="container">
-            <a href="#" class="navbar-brand d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                     stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
-                     viewBox="0 0 24 24">
-                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/>
-                    <circle cx="12" cy="13" r="4"/>
-                </svg>
-                <strong>Album</strong>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
-                    aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-    </div>
-</header>
+    <header>
+        {% if user.is_authenticated %}
+        <h4>Пользователь: {{ user }}</h4>
+        {% else %}
+        <h4>Авторизуйтесь</h4>
+        {% endif %}
+        <nav class="top_menu center">
+            {% if not user.is_authenticated %}
+            <a href="{% url 'ads:login' %}" class="header_link">Вход</a>
+            <a href="{% url 'ads:register' %}" class="header_link">Регистрация</a>
+            {% else %}
+            <a href="#" onclick="sendPostRequest()" class="header_link">Выход</a>
+            <form id="myForm" action="{% url 'ads:logout' %}" method="post" style="display:none;">
+                {% csrf_token %}
+            </form>
+            <script>
+                function sendPostRequest() {
+                  document.getElementById('myForm').submit();
+                }
+            </script>
+            {% endif %}
+        </nav>
+        {% if user.is_authenticated %}
+            <input placeholder="Поиск" type="text" class="header_input">
+        {% endif %}
+        <nav class="top_menu center">
+            <a href="{% url 'ads:ad_list' %}" class="header_link">Обьявления</a>
+            <a href="" class="header_link">Мои предложения</a>
+        </nav>
+    </header>
