--- a/static/sstyle.css
+++ b/static/sstyle.css
@@ -290,26 +290,37 @@ header {
   line-height: 17px;
   letter-spacing: 0px;
 }
+.login_form{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
 .login-box {
-  color: #FFFFFF;
+  padding: 30px;
+  border-radius: 15px;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: #FFFDD0;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 16px;
+  font-size: 20px;
 }
 
 .form-control {
   border: none;
+  border-bottom: solid 1px ;
   background-color: transparent;
   outline: none;
-  height: 16px;
-  font-size: 16px;
+  height: 20px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
   letter-spacing: 0%;
   text-align: left;
-  color: #FFFFFF;
+  color: #FFFDD0;
   padding-left: 32px;
   padding-right: 32px;
   box-sizing: border-box;
@@ -322,6 +333,7 @@ header {
   box-sizing: border-box;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 50px;
+  background: #FFFDD0;
   color: rgb(2, 2, 2);
   font-size: 14px;
   font-weight: 400;
