--- a/ads/templates/ads/base.html
+++ b/ads/templates/ads/base.html
@@ -5,9 +5,7 @@
 <div class="top center">
     {% include 'ads/includes/inc_menu.html' %}
 
-    <div class="titler">
-
-
+    <div class="titler_base" id="titlerBase">
         <h1 class="title">Второй шанс вашим вещам — площадка обмена</h1>
         <p class="desc">Обменивайте и продавайте любимые вещи легко и безопасно. Дарим вещам новую жизнь, а вам —
             экономию и экологичное потребление. Присоединяйтесь к сообществу осознанных покупателей!</p>
@@ -17,6 +15,6 @@
     {% endblock %}
 </div>
 
-
+<script src="{% static 'script.js' %}"></script>
 </body>
 </html>
