--- a/ads/templates/ads/includes/inc_menu.html
+++ b/ads/templates/ads/includes/inc_menu.html
@@ -21,9 +21,18 @@
             </script>
             {% endif %}
         </nav>
-        {% if user.is_authenticated %}
-            <input placeholder="Поиск" type="text" class="header_input">
-        {% endif %}
+        <form method="get" action="{% url 'ads:ad_list' %}">
+            <input placeholder="Поиск..." type="text" name="q" value="{{ request.GET.q }}" class="header_input">
+            <button type="submit" style="display: none"></button>
+        </form>
+        <script>
+            document.querySelector('input[name="q"]').addEventListener('keyup', function(event) {
+                if (event.key === "Enter") {
+                    event.preventDefault();
+                    this.form.submit();
+                }
+            });
+        </script>
         <nav class="top_menu center">
             <a href="{% url 'ads:ad_list' %}" class="header_link">Обьявления</a>
             <a href="" class="header_link">Мои предложения</a>
