--- a/ads/templates/ads/includes/inc_menu.html
+++ b/ads/templates/ads/includes/inc_menu.html
@@ -30,6 +30,6 @@
     </script>
     <nav class="top_menu center">
         <a href="{% url 'ads:ad_list' %}" class="header_link">Обьявления</a>
-        <a href="" class="header_link">Мои предложения</a>
+        <a href="{% url 'ads:exchange_proposal_list' %}" class="header_link">Мои предложения</a>
     </nav>
 </header>
