--- a/static/style.css
+++ b/static/style.css
@@ -425,6 +425,37 @@ header {
   text-decoration: underline;
 }
 
+.ep-img{
+  height: 200px;
+  width: 200px;
+}
+
+.ep_card_button {
+  height: 37px;
+  width: 200px;
+  box-sizing: border-box;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 50px;
+  color: rgb(2, 2, 2);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  transition: all 0.3s;
+}
+
+.ep_card_button:hover {
+  border-radius: 50px;
+  background: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+}
+
+.ep-link {
+  align-self: center;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
